apps/bvrinfra-site/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  namespace: apps
  name: bvrinfra-site
  labels:
    app: bvrinfra-site
    managed-by: argocd

spec:
  replicas: 1
  revisionHistoryLimit: 3

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:
    matchLabels:
      app: bvrinfra-site

  template:
    metadata:
      labels:
        app: bvrinfra-site

    spec:
      nodeSelector:
        workload: apps

      imagePullSecrets:
        - name: ghcr-secret

      containers:
        - name: bvrinfra-site

          image: ghcr.io/bodapati88/bvrinfra-site:sha-a3c16bf

          imagePullPolicy: Always

          ports:
            - containerPort: 80

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20

          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"

            limits:
              cpu: "250m"
              memory: "256Mi"
