apps/bvrinfra-site/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: bvrinfra-site

spec:
  selector:
    app: bvrinfra-site

  ports:
  - port: 80
    targetPort: 80
