apps/bvrinfra-site/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  namespace: apps
  name: bvrinfra-site

  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure

spec:
  ingressClassName: traefik

  tls:
  - hosts:
    - bvrinfra.in
    - www.bvrinfra.in
    secretName: bvrinfra-site-tls

  rules:
  - host: bvrinfra.in
    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: bvrinfra-site
            port:
              number: 80

  - host: www.bvrinfra.in
    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: bvrinfra-site
            port:
              number: 80
